src/lex/lexing/snapshots/lex__lex__lexing__detokenizer__tests__080-nested-lists-mixed-content.snap
---
source: src/lex/lexing/detokenizer.rs
expression: detokenized
---
Nested Lists with Mixed Content Test {{paragraph}}

This document tests list items containing a mix of paragraphs and other lists. {{paragraph}}

List with paragraph content: {{paragraph}}

- First item with nested paragraph {{list-item}}
    This is a paragraph nested inside the first list item. It provides additional context and detail. {{paragraph}}

- Second item with multiple paragraphs {{list-item}}
    This is the first paragraph in the second item {{paragraph}}

    This is a second paragraph, showing that list items can contain multiple paragraphs. {{paragraph}}

List with mixed paragraphs and nested lists: {{paragraph}}

1. First complex item {{list-item}}
    This is a paragraph explaining the first item. {{paragraph}}

    - Nested list item one {{list-item}}
    - Nested list item two {{list-item}}

    Another paragraph after the nested list. {{paragraph}}

2. Second complex item {{list-item}}
    Opening paragraph for item two. {{paragraph}}

    - First nested item {{list-item}}
    - Second nested item {{list-item}}

    Closing paragraph for item two. {{paragraph}}

Deeply nested structure: {{paragraph}}

- Outer item one {{list-item}}
    Paragraph in outer item. {{paragraph}}

    - Middle item one {{list-item}}
        - Inner item one {{list-item}}
        - Inner item two {{list-item}}

    - Middle item two {{list-item}}
        Paragraph in middle item. {{paragraph}}

- Outer item two {{list-item}}
    Final paragraph. {{paragraph}}

End of document. {{paragraph}}
