src/lex/lexing/snapshots/lex__lex__lexing__detokenizer__tests__090-definitions-simple.snap
---
source: src/lex/lexing/detokenizer.rs
expression: detokenized
---
Simple Definitions Test {{paragraph}}

This document tests the basic Definition element. {{paragraph}}

First Definition:
    This is the content of the first definition. {{paragraph}} {{definition}}

Second Definition:
    This definition has content that explains the second term. {{paragraph}} {{definition}}

Glossary Term:
    A glossary term is a word or phrase that needs explanation. {{paragraph}} {{definition}}

    This definition contains multiple paragraphs to show that definitions can have complex content. {{paragraph}}

API Endpoint:
    A specific URL path that provides access to a resource or function. {{paragraph}} {{definition}}

Regular paragraph after definitions. {{paragraph}}

Another Term:
    Definitions can appear anywhere in the document. {{paragraph}} {{definition}}

Final paragraph. {{paragraph}}
