src/lex/lexing/snapshots/lex__lex__lexing__detokenizer__tests__110-ensemble-with-definitions (semantic).snap
---
source: src/lex/lexing/detokenizer.rs
expression: detokenized
---
Ensemble Test with Definitions {{paragraph}}

This document tests all core elements (paragraphs, sessions, lists, and definitions) in complex nesting scenarios. {{paragraph}}

Introduction:
    This ensemble test demonstrates how definitions integrate with other lex elements. {{paragraph}} {{definition}}
    
    - Paragraphs provide narrative content {{list-item}}
    - Lists organize items {{list-item}}
    - Sessions structure hierarchical content {{list-item}}
    - Definitions explain terms and concepts {{list-item}}
    
1. Simple Elements Section {{session}}

    First, let's demonstrate each element in isolation. {{paragraph}}
    
    API Endpoint:
        A URL that provides access to a specific resource or function. {{paragraph}} {{definition}}
        
    Database Types:
        - Relational databases {{list-item}} {{definition}}
        - NoSQL databases {{list-item}}
        - Graph databases {{list-item}}
        
    Here's a simple list at the session level {{paragraph}}
    
    - First item {{list-item}}
    - Second item {{list-item}}
    - Third item {{list-item}}
    
2. Nested Elements Section {{session}}

    Now we'll test more complex nesting patterns. {{paragraph}}
    
    2.1. Subsection with Definitions {{session}}
    
        Microservice:
            An architectural style that structures an application as a collection of loosely coupled services. {{paragraph}} {{definition}}
            
            Key characteristics {{paragraph}}
            
            - Independence {{list-item}}
            - Scalability {{list-item}}
            - Resilience {{list-item}}
            
        Container:
            A lightweight, standalone executable package that includes everything needed to run software. {{paragraph}} {{definition}}
            
        Regular paragraph between definitions. {{paragraph}}
        
        Orchestration:
            The automated arrangement, coordination, and management of complex systems. {{paragraph}} {{definition}}
            
            - Kubernetes {{list-item}}
            - Docker Swarm {{list-item}}
            
    2.2. Subsection with Mixed Content {{session}}
    
        This subsection contains a mix of all element types. {{paragraph}}
        
        REST API:
            Representational State Transfer Application Programming Interface. {{paragraph}} {{definition}}
            
            - GET: Retrieve resources {{list-item}}
            - POST: Create resources {{list-item}}
            - PUT: Update resources {{list-item}}
            - DELETE: Remove resources {{list-item}}
            
        Middleware paragraph explaining the concept. {{paragraph}}
        
        Authentication Methods:
            - OAuth 2.0 {{list-item}} {{definition}}
            - JWT tokens {{list-item}}
            - API keys {{list-item}}
            
        Another paragraph with context. {{paragraph}}
        
        - Session-level list item one {{list-item}}
        - Session-level list item two {{list-item}}
        
3. Deep Nesting Section {{session}}

    This section tests deeper nesting levels. {{paragraph}}
    
    3.1. Level One {{session}}
    
        Content at level one. {{paragraph}}
        
        Design Pattern:
            A reusable solution to a commonly occurring problem. {{paragraph}} {{definition}}
            
            - Creational patterns {{list-item}}
            - Structural patterns {{list-item}}
            - Behavioral patterns {{list-item}}
            
        3.1.1. Level Two {{session}}
        
            Content at level two. {{paragraph}}
            
            Singleton Pattern:
                Ensures a class has only one instance. {{paragraph}} {{definition}}
                
            Factory Pattern:
                Creates objects without specifying exact classes. {{paragraph}} {{definition}}
                
                - Simple Factory {{list-item}}
                - Factory Method {{list-item}}
                - Abstract Factory {{list-item}}
                
            More level two content. {{paragraph}}
            
Regular paragraph after all sessions. {{paragraph}}

Final Definition:
    Definitions can appear at any level of the document structure. {{paragraph}} {{definition}}
    
End of ensemble test. {{paragraph}}
