src/lex/lexing/snapshots/lex__lex__lexing__detokenizer__tests__130-annotations-block-content.snap
---
source: src/lex/lexing/detokenizer.rs
expression: detokenized
---
Annotations with Block Content Test {{paragraph}}

This document tests annotations containing paragraphs and lists in block form. {{paragraph}}

:: note author="Jane Doe" date=2025-01-15 ::
    This is an important note that requires a detailed explanation. {{paragraph}}

    It can span multiple paragraphs to provide comprehensive information. {{paragraph}}
::

Regular paragraph between annotations. {{paragraph}}

:: warning severity=critical,priority=high reviewer="Alice Smith" ::
    The following items must be addressed before deployment {{paragraph}}

    - Security vulnerabilities {{list-item}}
    - Performance issues {{list-item}}
    - Documentation gaps {{list-item}}
::

End of block content test. {{paragraph}}
