src/lex/lexing/snapshots/lex__lex__lexing__detokenizer__tests__200-quick-block.left.snap
---
source: src/lex/lexing/detokenizer.rs
expression: detokenized
---
Foo 

Code Example:

    // This is JavaScript code
    function hello() {
        return "world";
    }

    // Comments and special characters are preserved
    const regex = /[a-z]+/g;
    console.log("Hello, World!");

:: javascript caption="Hello World in JavaScript" ::
